# ImmersiveRAG

./: .gitignore  architecture.md  expansion_roadmap.md  my_plan.md  recent_changes.md  setup.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  context_b.md  diagnose.py  pyproject.toml  requirements.txt  test_e2e.py  test_llm.py  test_results.txt  test_run.py  test_streaming.py  unlock_qdrant.py
backend/app/: main.py  models.py
backend/app/adapters/: embeddings.py  generation.py  llama_index.py  metadata_store.py  object_store.py  vector_store.py
backend/app/api/: admin_router.py  agent_router.py  dependencies.py  routes.py
backend/app/core/: config.py  scheduler.py  warnings.py
backend/app/data/: rag.db
backend/app/engine/agents/: conversation_memory.py  graph_runner.py  llm_client.py  master_graph.py  master_router_graph.py  state.py
backend/app/engine/agents/subgraphs/: analysis_agent.py  document_agent.py  report_agent.py  retrieval_agent.py  stubs.py
backend/app/engine/document_processing/: ocr_parser.py
backend/app/engine/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
backend/app/engine/memory/: session_cache.py
backend/app/engine/retrieval/: orchestrator.py  reranker.py
backend/app/engine/tools/: export_tools.py  template_extractor.py
backend/app/models/: api_models.py  domain_models.py
backend/app/services/: answering.py  container.py  diagnostics.py  ingestion.py  parsing.py  retrieval.py
backend/app/storage/: relations_db.py  vector_db.py
backend/backend/data/: rag.db
backend/backend/data/qdrant/: meta.json
backend/backend/data/uploads/: 4cb120c43f174ee2b1b112e92b8b49d6_pytest_document.txt  5f260d001a8d448bb64cb2976eae79fc_test_upload.txt  d1e5fb2f061f45179f5685c7411a8ec7_diag.txt  f739b022f6c143a5b3d11b2270a206b9_task.md  ffaf06d869664e1ab0f24ef65e5b3031_test.txt
backend/tests/: conftest.py  test_generation.py  test_health.py  test_ingestion.py  test_jobs.py  test_parsing.py  test_retrieval.py
deploy/: deploy.sh  immersiverag-backend.service  (+2 more)
(+33 files in other folders)
